<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

   <!--
   SPDX-FileCopyrightText: © Sebastian Thomschke and contributors
   SPDX-License-Identifier: EPL-2.0
   -->

   <modelVersion>4.0.0</modelVersion>

   <parent>
      <groupId>com.vegardit.maven</groupId>
      <artifactId>vegardit-maven-parent</artifactId>
      <version>3.1.5</version>
   </parent>

   <groupId>net.sf.jstuff</groupId>
   <artifactId>jstuff-parent</artifactId>
   <version>7.11.1-SNAPSHOT</version>
   <packaging>pom</packaging>

   <name>jstuff</name>
   <description>Toolbox for Java</description>
   <url>https://github.com/sebthom/jstuff</url>
   <inceptionYear>2010</inceptionYear>
   <organization>
      <!-- used as Specification/Implementation-Vendor in MANIFEST.MF -->
      <name>Sebastian Thomschke</name>
   </organization>
   <licenses>
      <license>
         <name>Eclipse Public License 2.0</name>
         <distribution>repo</distribution>
         <url>https://spdx.org/licenses/EPL-2.0</url>
      </license>
   </licenses>


   <developers>
      <developer>
         <id>sebthom</id>
         <name>Sebastian Thomschke</name>
         <url>https://sebthom.de/</url>
         <roles>
            <role>lead</role>
            <role>developer</role>
         </roles>
         <timezone>Europe/Berlin</timezone>
      </developer>
   </developers>


   <modules>
      <module>jstuff-core</module>
      <module>jstuff-integration</module>
      <module>jstuff-xml</module>
   </modules>


   <scm>
      <!-- https://maven.apache.org/scm/git.html -->
      <url>https://github.com/sebthom/jstuff</url>
      <connection>scm:git:https://github.com/sebthom/jstuff.git</connection>
      <developerConnection>scm:git:https://github.com/sebthom/jstuff.git</developerConnection>
      <tag>HEAD</tag>
   </scm>


   <issueManagement>
      <system>github.com</system>
      <url>https://github.com/sebthom/jstuff/issues</url>
   </issueManagement>


   <ciManagement>
      <system>github.com</system>
      <url>https://github.com/sebthom/jstuff/actions</url>
   </ciManagement>


   <properties>
      <java.version>11</java.version>

      <skip.japicmp.cmp>true</skip.japicmp.cmp>

      <nexus-staging-maven-plugin.nexusUrl>https://s01.oss.sonatype.org/</nexus-staging-maven-plugin.nexusUrl>
   </properties>


   <!-- global dependencies -->
   <dependencies>

      <dependency>
         <groupId>org.eclipse.jdt</groupId>
         <artifactId>org.eclipse.jdt.annotation</artifactId>
         <version>2.3.0</version>
         <scope>provided</scope>
      </dependency>

      <!-- test dependencies -->
      <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
         <version>4.13.2</version>
         <scope>test</scope>
      </dependency>
      <dependency>
         <groupId>org.assertj</groupId>
         <artifactId>assertj-core</artifactId>
         <version>3.26.0</version>
         <scope>test</scope>
      </dependency>
   </dependencies>


   <build>
      <plugins>
         <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>build-helper-maven-plugin</artifactId>
            <executions>
               <execution>
                  <id>add-license-file-to-jar</id>
                  <phase>generate-resources</phase>
                  <goals>
                     <goal>add-resource</goal>
                  </goals>
                  <configuration>
                     <resources>
                        <resource>
                           <directory>./</directory>
                           <targetPath>META-INF</targetPath>
                           <includes>
                              <include>../LICENSE.txt</include>
                           </includes>
                        </resource>
                     </resources>
                  </configuration>
               </execution>
            </executions>
         </plugin>
      </plugins>
   </build>

</project>